--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body {
@@ -12,164 +12,166 @@ body {
   background: #f7f7f7;
 }
 
+
 .sidebar {
   width: 260px;
-  background: #ffffff;
-  border-right: 1px solid #e4e4e4;
+  background: #1e1e2a; 
+  border: 2px solid black;
   padding: 20px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  background-color: #1e1e2a;
+  
 }
 
 .sidebar .logo {
   font-size: 22px;
   font-weight: bold;
-  color: #333;
+  color: #5a4ac4; 
+  
 }
 
 .content {
   flex: 1;
   padding: 40px;
+  overflow-y: auto; 
+  background-color:#1e1e2a;
 }
 
+.top-bar {
+display: flex;
+justify-content: space-between;
+margin-bottom:  30px;
+
+}
 .top-bar h1 {
   font-size: 28px;
   margin-bottom: 5px;
+  color: white;
 }
 
 .top-bar p {
   color: #555;
   margin-bottom: 20px;
+  margin-bottom: 0;
 }
 
 .date-picker input {
   padding: 10px;
   font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+
+.period {    
+  background: #242a1e4b;
+  border-radius: 12px;
+  margin-bottom: 24px; 
+  overflow: hidden; 
+}
+
+
+.period h2 {
+  font-size: 18px;
+  color: white;
+  display: flex;
+  justify-content: space-between; 
+  align-items: center; 
+  
+  
+  padding: 16px 20px; 
+  
+  
+  border-bottom: 1px solid #3c3c4e; 
+  margin: 0;
 }
 
 .header-content {
-    
     display: flex;
     align-items: center;
     gap: 10px; 
-    font-size: 14px;
-    padding-bottom: 15px;
 }
 
-.period {
-  background: #ffffff;
-  border: 1px solid #e4e4e4;
-  border-radius: 10px;
-  padding: 20px;    
-  min-height: 150px;
-  
-}
 
-.period h2 {
-  font-size: 20px;
-  padding-bottom: 10px;
-  display: flex;
-  gap:10px;
-  color: white;
-  justify-content: space-between; 
-  align-items: center; 
-  color: white;
-  
-  
+.header-content img {
+    width: 20px;
+    height: 20px;
+    object-fit: contain;
 }
-
 
 .period h2 span {
-  font-size: 14px;
+  font-size: 18px;
   color: #777;
-  
+  font-weight: normal;
 }
+
 
 .appointments {
   display: flex;
   flex-direction: column;
-  gap: 10px;
-}
-
-.new-appointment {
-  margin-top: 40px;
-  padding: 15px 20px;
-  background: #6a5acd;
-  color: white;
-  border: none;
-  border-radius: 8px;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-.new-appointment:hover {
-  background: #5a4ac4;
-}
-
-
-
-.period{    
-  background: #1e1e2a;
-  border-radius: 12px;
   
 }
+
 
 .appointment-card {
-  /* Pode mudar dependendo 
-  background: #2a2a36; 
-  border-radius: 10px;*/
-
-  
   color: #fff;
   display: flex;
-  padding: 14px 16px;
   align-items: center;
-  gap: 16px;
   justify-content: space-between;
+  
+  
+  padding: 18px 20px; 
+  
   font-size: 14px;
-  border-top: 1px solid #3c3c4e; 
-  
-  
-  
-
-  
+  position: relative; 
+  background: transparent;
 }
 
+
+.appointment-card + .appointment-card::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 20px;  
+    right: 20px; 
+    height: 1px;
+    background-color: #3c3c4e; 
+}
 
 .appointment-card .time {
   font-size: 14px;
   font-weight: bold;
-  width: 70px;
-  
+  width: 60px; 
 }
 
 .appointment-card .info {
-  
   display: flex;
-  gap: 4px;
-  text-align: left;
-  
-  
+  align-items: center;
+  gap: 15px;
+  flex: 1; 
+}
+
+.appointment-card .details {
+    display: flex;
+    gap: 5px;
 }
 
 .appointment-card .info strong {
-  font-size: 12px;
-  
+  font-size: 14px;
+  color: #fff;
 }
 
 .appointment-card .info span {
-  font-size: 12px;
+  font-size: 14px;
   color: #aaa;
 }
 
 .appointment-card .service {
-  
-  font-size: 12px;
+  font-size: 14px;
   color: #777;
-  
-  
+  margin-right: 20px;
+  width: 200px;
+  text-align: right;
 }
 
 .remove {
@@ -178,8 +180,26 @@ body {
   color: #ff6961;
   font-size: 16px;
   cursor: pointer;
+  transition: 0.2s;
 }
 
 .remove:hover {
   color: #ffaaaa;
+}
+
+/* BOTÃO NOVO AGENDAMENTO */
+.new-appointment {
+  margin-top: 20px;
+  padding: 15px 25px;
+  background: #6a5acd;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  font-size: 16px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.new-appointment:hover {
+  background: #5a4ac4;
 }
